# library

./: books_db.dump  pyproject.toml
.github/workflows/: deploy.yml
books/: admin.py  models.py  permissions.py  serializers.py  views.py
books/management/commands/: bot.py  bot2.py
books/migrations/: 0001_initial.py  0002_alter_author_image_alter_book_image.py  0003_alter_book_image.py  0004_alter_book_options_review.py  0005_alter_review_options_alter_review_pub_date.py  0006_userbookrelation.py  0007_book_readers.py  0008_book_bbk_book_copy_sign_book_pages_book_udp.py  0009_remove_book_udp.py  0010_book_inventory.py  0011_remove_book_inventory_bookinstance_inventory_and_more.py  0012_language.py  0013_book_language.py  0014_author_middle_name.py  0015_alter_language_name.py  0016_remove_book_language_book_language.py  0017_remove_book_bbk_remove_book_copy_sign_and_more.py  0018_alter_book_summary.py  0019_alter_book_isbn.py
